5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4130/executions/1593_2425.log
== TEST (2019-03-26 10:39:50) 
-- CODE:
a = float(input("Digite um valor: "))
b = float(input("Digite um valor: "))

x = a / b

print((round(x, 3)), ("km/l") 


-- ERROR:
File "XXXX", line 8
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:39:55) 
-- CODE:
a = float(input("Digite um valor: "))
b = float(input("Digite um valor: "))

x = a / b

print((round(x, 3)), ("km/l") 
-- ERROR:
File "XXXX", line 7
    
                                  ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:40:01) 
-- CODE:
a = float(input("Digite um valor: "))
b = float(input("Digite um valor: "))

x = a / b

print((round(x, 3)), ("km/l"))
-- OUTPUT:
14.286 km/l
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 10:40:11) 
-- CODE:
a = float(input("Digite um valor: "))
b = float(input("Digite um valor: "))

x = a / b

print((round(x, 3)), ("km/l"))
-- EXECUTION TIME:
0.18085
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286 km/l
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119 km/l
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802 km/l
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:30:20) 
-- CODE:
a = float(input("Digite um valor: "))
b = float(input("Digite um valor: "))

x = a / b

print((round(x, 3)), ("km/l"))
-- EXECUTION TIME:
0.137046
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286 km/l
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119 km/l
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802 km/l
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
